--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_portada">Portada</string>
     <string name="title_activity_registro">Registro</string>
     <string name="title_activity_busqueda">Busqueda</string>
+    <string name="title_activity_trayectos">Trayectos</string>
 
 </resources>
