--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_registro">Registro</string>
     <string name="title_activity_busqueda">Busqueda</string>
     <string name="title_activity_trayectos">Trayectos</string>
+    <string name="title_activity_trip_detail">TripDetail</string>
 
 </resources>
