--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_trayectos">Trayectos</string>
     <string name="title_activity_trip_detail">TripDetail</string>
     <string name="title_activity_addtrip">Addtrip</string>
+    <string name="title_activity_http_new_trip">HttpNewTrip</string>
 
 </resources>
