--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_trip_detail">TripDetail</string>
     <string name="title_activity_addtrip">Addtrip</string>
     <string name="title_activity_http_new_trip">HttpNewTrip</string>
+    <string name="title_activity_http_login">HttpLogin</string>
 
 </resources>
