--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="busqueda_hoy">Hoy</string>
     <string name="busqueda_manyana">Mañana</string>
+    <string name="busqueda_noresults">No se han encontrado trayectos para la búsqueda realizada</string>
     
     <string name="trip_informacion">Información</string>
     <string name="trip_restricciones">Restricciones</string>
